force-app/main/default/objects/Account/fields/Bed_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Bed_Capacity__c</fullName>
    <label>Bed Capacity</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>