force-app/main/default/objects/Account/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <label>Credit Limit</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>