force-app/main/default/objects/Account/fields/Drug_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Drug_License_Number__c</fullName>
    <label>Drug License Number</label>
    <type>Text</type>
    <length>50</length>
    <unique>true</unique>
</CustomField>