force-app/main/default/objects/Account/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Institution Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier A</fullName>
            </value>
            <value>
                <fullName>Tier B</fullName>
                <default>true</default>
                <label>Tier B</label>
            </value>
            <value>
                <fullName>Tier C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>